# foundry-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  foundry-ai.cabal  module.json  package.yaml  stack.yaml
app/: Main.hs
js/: foundry-ai.js
js/lang/: en.json
src/: FoundryAI.hs
test/: Spec.hs
